docs(t18.1): adopt ADR-0007 trust model, correct SEC-H2 root cause to type-level provenance erasure
- ADR-0007 D1-D7 with per-decision enforcement tests
- Correct .github/copilot-instructions.md, which still described the nine
  packages t13 deleted and was auto-injected into every agent's context
- Record 6th instance of the systemic scope-invisibility pattern
- Route t18.2 implementation contract (D6 before D5) to backend
- Fold SEC-L8 into t18.2, SEC-L6 and .sdkmanrc drift into t19

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 4d9cc200-d502-4a61-9684-d4ebcd9a7079